<resources>
    <string name="app_name">MovieApp</string>
    <string name="book">Book</string>
    <string name="release_date">Release Date :</string>
    <string name="rating">Rating</string>
    <string name="search_movie">Search Movies</string>
    <string name="synopsis">Synopsis</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="recommended_movies">Recommended Movies</string>
    <string name="cast">Cast</string>
</resources>
